Render: Adjust the default value for contrast/saturation

Bugzilla: https://bugs.freedesktop.org/show_bug.cgi?id=73016
Signed-off-by: Xiang, Haihao <haihao.xiang@intel.com>
Tested-by: Mark Lee <mark@markelee.com>